--- a/ansible/playbooks/main.yml
+++ b/ansible/playbooks/main.yml
@@ -8,19 +8,22 @@
   roles:
     - elasticsearch
   vars:
+    es_custom_package_url: "/tmp/elasticsearch-7.17.13-x86_64.rpm"
+    es_use_repository: false
     es_heap_size: "2g"
     es_config:
       cluster.name: "els"
       network.host: 0
       cluster.initial_master_nodes: "els0,els1,els2"
-      discovery.seed_hosts: "els0:9300,els2:9300,els2:9300"
+      discovery.seed_hosts: "els0,els1,els2"
       http.port: 9200
+      transport.tcp.port: 9300
       node.data: true
       node.master: true
       node.ingest: false
       node.ml: false
       cluster.remote.connect: false
-      bootstrap.memory_lock: true
+      bootstrap.memory_lock: false
   become: true 
 
 - hosts: db_hosts
@@ -29,7 +32,7 @@
 
 - hosts: iscsi_hosts
   roles:
-   - { role: iscsi, become: true }
+    - { role: iscsi, become: true }
 
 - hosts: backend_hosts
   roles:
