--- a/ansible/roles/elasticsearch/tasks/compatibility-variables.yml
+++ b/ansible/roles/elasticsearch/tasks/compatibility-variables.yml
@@ -20,7 +20,8 @@
     es_package_name: "elasticsearch"
     es_other_package_name: "elasticsearch-oss"
     es_other_repo_name: "{{ 'oss-' + es_major_version }}"
-    es_other_apt_url: "deb {{ es_repo_base }}/packages/{{ 'oss-' + es_major_version }}/apt stable main"
+    # es_other_apt_url: "deb {{ es_repo_base }}/packages/{{ 'oss-' + es_major_version }}/apt stable main"
+    es_other_apt_url: "deb [trusted=yes] https://mirror.yandex.ru/mirrors/elastic/7/ stable main"
 
 - name: Use the oss repo and package
   set_fact:
