--- a/ansible/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
+++ b/ansible/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
@@ -6,27 +6,27 @@
   set_fact: allow_downgrade=yes
   when: es_allow_downgrades
 
-- name: Ensure libselinux-python on CentOS 6.x
-  become: yes
-  yum: name=libselinux-python state=present update_cache=yes
-  when: ( ansible_distribution == "CentOS" ) and ( ansible_distribution_major_version == "6" )
+# - name: Ensure libselinux-python on CentOS 6.x
+#   become: yes
+#   yum: name=libselinux-python state=present update_cache=yes
+#   when: ( ansible_distribution == "CentOS" ) and ( ansible_distribution_major_version == "6" )
 
-- name: RedHat - add Elasticsearch repo
-  become: yes
-  template:
-    src: 'elasticsearch.repo'
-    dest: '/etc/yum.repos.d/elasticsearch-{{ es_repo_name }}.repo'
-  when: es_use_repository and es_add_repository
+# - name: RedHat - add Elasticsearch repo
+#   become: yes
+#   template:
+#     src: 'elasticsearch.repo'
+#     dest: '/etc/yum.repos.d/elasticsearch-{{ es_repo_name }}.repo'
+#   when: es_use_repository and es_add_repository
 
-- name: RedHat - remove unused Elasticsearch repo
-  become: yes
-  file:
-    path: '/etc/yum.repos.d/elasticsearch-{{ es_other_repo_name }}.repo'
-    state: absent
-  when: es_use_repository
+# - name: RedHat - remove unused Elasticsearch repo
+#   become: yes
+#   file:
+#     path: '/etc/yum.repos.d/elasticsearch-{{ es_other_repo_name }}.repo'
+#     state: absent
+#   when: es_use_repository
 
-- name: RedHat - include versionlock
-  include: elasticsearch-RedHat-version-lock.yml
+# - name: RedHat - include versionlock
+#   include: elasticsearch-RedHat-version-lock.yml
 
 - name: RedHat - Remove the other elasticsearch package if switching between OSS and standard
   become: yes
@@ -38,17 +38,24 @@
   when: (es_user_id is defined) and (es_group_id is defined)
   include: elasticsearch-optional-user.yml
 
+- name: copy install to temp
+  copy:
+    src: files/elasticsearch-7.17.13-x86_64.rpm
+    dest: /tmp/elasticsearch-7.17.13-x86_64.rpm
+
 - name: RedHat - Install Elasticsearch
   become: yes
   yum:
-    name: '{{ es_package_name }}{% if es_version is defined and es_version != ""  %}-{{ es_version }}{% endif %}'
+    # name: '{{ es_package_name }}{% if es_version is defined and es_version != ""  %}-{{ es_version }}{% endif %}'
+    name: /tmp/elasticsearch-7.17.13-x86_64.rpm
     state: present
-    update_cache: yes
-    allow_downgrade: '{{ allow_downgrade }}'
-  when: es_use_repository and not ansible_check_mode
-  register: redhat_elasticsearch_install_from_repo
+    disable_gpg_check: true
+  #   update_cache: yes
+  #   allow_downgrade: '{{ allow_downgrade }}'
+  # when: es_use_repository and not ansible_check_mode
+  # register: redhat_elasticsearch_install_from_repo
   notify: restart elasticsearch
-  until: redhat_elasticsearch_install_from_repo.rc == 0
+  # until: redhat_elasticsearch_install_from_repo.rc == 0
   retries: 5
   delay: 10
   environment:
@@ -56,7 +63,8 @@
 
 # workaround due to https://github.com/ansible/ansible/issues/66977
 - set_fact:
-    es_rpm_url: "{% if es_version is version('7.0.0', '>=') %}{{ es_package_url }}-{{ es_version }}-x86_64.rpm{% else %}{{ es_package_url }}-{{ es_version }}.rpm{% endif %}"
+    # es_rpm_url: "{% if es_version is version('7.0.0', '>=') %}{{ es_package_url }}-{{ es_version }}-x86_64.rpm{% else %}{{ es_package_url }}-{{ es_version }}.rpm{% endif %}"
+    es_rpm_url: "/tmp/elasticsearch-7.17.13-x86_64.rpm"
 
 - name: RedHat - Install Elasticsearch from url
   become: yes
